user/userIdentityAPI/K8/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672  # Exponerar RabbitMQ:s meddelandeport
      targetPort: 5672
    - protocol: TCP
      port: 15672  # Exponerar Management UI
      targetPort: 15672
  type: NodePort # Gör tjänsten tillgänglig på en nodport
